--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,17 @@
     <groupId>com.example</groupId>
     <artifactId>my-spring-boot-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <!-- 只需要在此依赖上指定版本号, 如果需要导入其他 starter, 则可以放心地忽略版本 -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.9.RELEASE</version>
     </parent>
+
+    <!-- 在使用 spring-boot-starter-parent 时，可以通过以下方式来覆盖个别依赖的版本 -->
+    <properties>
+        <spring-data-releasetrain.version>Fowler-SR2</spring-data-releasetrain.version>
+    </properties>
 
     <!-- Additional lines to be added here... -->
     <dependencies>
