M-20220309 23:12-修改pom.xml以及README.md文件

--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,48 @@
     <artifactId>my-spring-boot-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <!-- 只需要在此依赖上指定版本号, 如果需要导入其他 starter, 则可以放心地忽略版本 -->
-    <parent>
+    <!--<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.9.RELEASE</version>
     </parent>
 
-    <!-- 在使用 spring-boot-starter-parent 时，可以通过以下方式来覆盖个别依赖的版本 -->
+    &lt;!&ndash; 在使用 spring-boot-starter-parent 时，可以通过以下方式来覆盖个别依赖的版本 &ndash;&gt;
     <properties>
         <spring-data-releasetrain.version>Fowler-SR2</spring-data-releasetrain.version>
-    </properties>
+        <slf4j.version>1.7.30</slf4j.version>
+        <log4j2.version>2.10.0</log4j2.version>
+    </properties>-->
+
+    <dependencyManagement>
+        <!-- 使用 scope = import 导入依赖时，需要通过以下方式覆盖；如下例中的覆盖 Spring Data 的另一个发行版 -->
+        <dependencies>
+            <!-- 覆盖 Spring Boot 提供的 Spring Data -->
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-releasetrain</artifactId>
+                <version>Fowler-SR2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.30</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <!-- 从 Spring Boot 导入依赖管理 -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.0.0.RELEASE</version>
+                <type>pom</type>
+                <!-- 获得依赖管理（但不是插件管理）-->
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <!-- Additional lines to be added here... -->
     <dependencies>
@@ -28,6 +60,7 @@
 
     <build>
         <plugins>
+            <!-- 该 Maven 插件可以将项目打成一个可执行jar 当继承了spring-boot-starter-parent 时，只需要添加该插件即可 无需配置 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
